--- a/.github/workflows/deploy-to-docker-hub.yml
+++ b/.github/workflows/deploy-to-docker-hub.yml
@@ -25,4 +25,4 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: binodeveloper/ubuntu-puppeteer:latest
+        tags: binodeveloper/ubuntu-puppeteer:${{ github.sha }}
